# zmr-ctx-paker

./: .context-pack.yaml.example  .dockerignore  .editorconfig  .gitattributes  .gitignore  .mailmap  .pre-commit-config.yaml  .ws-ctx-engine.yaml  .ws-ctx-engine.yaml.example  AI_AGENTS.md  ARCHITECTURE_SUMMARY.md  AUTHORS.md  CHANGELOG.md  CLAUDE.md  CLEANUP_REPORT.md  CODE_OF_CONDUCT.md  COMPETITOR_ANALYSIS.md  CONTRIBUTING.md  CONTRIBUTOR_GUIDE.md  DOCS_INDEX.md  INSTALL.md  LICENSE  MANIFEST.in  PROJECT_ARCHIVE_SUMMARY.md  PROJECT_POSTMORTEM.md  README.md  SECURITY.md  STRUCTURE.md  pyproject.toml
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build-rust.yml
.kiro/specs/context-packer/: .config.kiro  design.md  requirements.md  tasks.md
_rust/: Cargo.toml
_rust/src/: hasher.rs  lib.rs  token_counter.rs  walker.rs
benchmarks/: toon_vs_alternatives.py
docs/: HOW_TO_FIX_MISSING_DEPS.md  PRD.md  README.md  agent-workflows.md  chunker_issues_report.md  compression.md  leann-implementation-research.md  logging.md  performance.md  repo-review.md  review-prompts.md
docs/cli/: ctx-packer-init-enhanced-plan.md  ctx-packer-init-enhancement-plan-v2.md  ws-ctx-engine-init-enhanced-plan.md  ws-ctx-engine-init-enhancement-plan-v2.md
docs/development/audits/: chunker-issues.md  review-prompts.md
docs/development/plans/: v0.3.0.md
docs/for-agents/: agent-integration-proposal.md  ctx-packer-agent-plan-v4-implementation-audit.md  ctx-packer-agent-plan-v4.md  ws-ctx-engine-agent-plan-v4-implementation-audit.md  ws-ctx-engine-agent-plan-v4.md
docs/guides/: output-formats.md
docs/integrations/: claude-desktop.md  mcp-server.md
docs/mcp/: README.md  claude-desktop-integration.md  cursor-integration.md  mcp-server-reference.md  security-audit.md  windsurf-integration.md
docs/performance/: MCP_PERFORMANCE_OPTIMIZATION.md
docs/reference/: architecture.md  budget.md  chunker.md  graph.md  packer.md  prd.md  ranking.md  retrieval.md  secret-scanner.md  supporting-modules.md  vector-index.md
docs/reference/cli/: README.md  architecture.md  global-options.md  related-modules.md
docs/reports/: CHONKIE_MARKDOWN_RESOLVER_INVESTIGATION.md  CHUNKING_STRATEGY_VERDICT.md  CODE_CHUNKING_STRATEGY_REPORT.md  GRAPH_RAG_ROADMAP.md  INDEX_MANAGEMENT_ROADMAP.md  REPOMIX_MCP_SKILLS_INTEGRATION_RESEARCH_REPORT.md
docs/roadmap/: ROADMAP-v2.md  ROADMAP-v3.md  ROADMAP.md  feedback-1.md  review-1.md  review-2.md  roadmap-v1.md  ws-ctx-engine-vs-repomix-report.md
docs/superpowers/plans/: 2026-03-26-roadmap-v2-implementation.md
docs/superpowers/specs/: 2026-03-24-query-classification-domain-map-design.md
docs/system/: IDEA.md  cli.md  config.md  output-formatters.md  retrieval.md  workflow.md
examples/: .gitignore  README.md  codechunk_demo.py  logger_demo.py  retrieval_example.py
examples/context-packer-self/: run_self_tests.sh
examples/mcp/: QUICKSTART.md  README.md  debug_logger.py  error_handler.py  json_examples.py  practical_demo.py  tool_demo.py
examples/zmr-koe/: README.md  config.yaml  demo_voice_management_query.sh  run_zmr_koe_tests.sh
scripts/: dependency_doctor.py  init.sh  phase0_cozo_validation.py  phase2_graphstore_benchmark.py  publish.sh
scripts/agents/: agents_md.sh  claude.sh  codex.sh  copilot.sh  cursor.sh  trae.sh
scripts/lib/: core.sh  index.sh  install.sh
scripts/mcp/: mcp_comprehensive_test.py  mcp_e2e_qoder.py  mcp_stress_test.py
src/context_packer/: __init__.py  backend_selector.py  budget.py  chunker.py  chunker.py.backup  cli.py  config.py  graph.py  indexer.py  init_cli.py  logger.py  mcp_server.py  performance.py  pretty_printer.py  query.py  retrieval.py  secret_scanner.py  vector_index.py  xml_packer.py  zip_packer.py
src/context_packer/backend_selector/: __init__.py  backend_selector.py
src/ws_ctx_engine/: __init__.py  init_cli.py  mcp_server.py  secret_scanner.py
templates/agents_md/: AGENTS.md.tpl
templates/copilot/: copilot-instructions.md.tpl
templates/cursor/: ctx-packer.mdc.tpl
templates/windsurf/: ctx-packer.md.tpl
tests/: README.md  __init__.py  conftest.py  query_test.py  stress_test.py  test_package.py  test_patterns.py  test_performance_benchmarks.py
tests/fixtures/: all_langs_config.yaml
tests/integration/: __init__.py  test_config_integration.py  test_fallback_scenarios.py  test_graph_query_pipeline.py  test_graph_store_indexer.py  test_mcp_benchmarks.py  test_mcp_graph_tools_integration.py  test_mcp_integration.py  test_phase5_integration.py  test_phase_ranker_integration.py  test_query_workflow.py
tests/property/: __init__.py  test_ast_chunker_properties.py  test_backend_selector_properties.py  test_budget_properties.py  test_cli_properties.py  test_config_properties.py  test_error_logging_properties.py  test_graph_properties.py  test_index_workflow.py  test_mcp_security_properties.py  test_models_properties.py  test_performance_properties.py  test_pretty_printer_properties.py  test_retrieval_properties.py  test_vector_index_properties.py  test_xml_packer_properties.py  test_zip_packer_properties.py
tests/unit/: __init__.py  test_ast_chunker.py  test_ast_chunker_upgrade.py  test_base_chunker.py  test_bm25_index.py  test_budget.py  test_call_chain.py  test_chunker.py  test_chunker_phase1.py  test_chunker_phase2.py  test_cli.py  test_cli_command_coverage.py  test_cli_mcp.py  test_cli_status_graph.py  test_code_tokenizer.py  test_compressor.py  test_config.py  test_config_graph_store.py  test_context_assembler.py  test_context_enrichment.py  test_cozo_store.py  test_domain_map.py  test_domain_map_db.py  test_embedding_cache.py  test_graph.py  test_graph_backup.py  test_graph_bridge.py  test_graph_metrics.py  test_graph_stats.py  test_hybrid_engine.py  test_init_cli.py  test_init_mcp_config.py  test_leann_searcher_cache.py  test_logger.py  test_markdown_chunker.py  test_mcp_config.py  test_mcp_graph_tools.py  test_mcp_rate_limiter.py  test_mcp_security_units.py  test_mcp_server.py  (+28 more)
(+333 files in other folders)
