[package]
name = "ws_ctx_engine_rust"
version = "0.2.0"
edition = "2021"

[lib]
name = "_rust"
crate-type = ["cdylib"]

[dependencies]
# PyO3 — Python bindings for Rust
pyo3 = { version = "0.23", features = ["extension-module"] }

# Fast parallel file walker with built-in gitignore support
ignore = "0.4"

# Rayon — data parallelism
rayon = "1"

[profile.release]
# Strip debug symbols and enable LTO for smaller, faster wheels
strip = true
lto = true
codegen-units = 1
